# enterprise-agentic-ai-platform

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_backend_foundation.py  20260721_0002_add_phase_3_core_schema_and_identity.py  20260721_0003_enable_pgvector_embeddings.py
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/: auth.py  dependencies.py  documents.py  router.py  system.py  users.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/evaluations/: __init__.py
backend/app/llm/: __init__.py
backend/app/models/: __init__.py  domain.py  identity.py
backend/app/repositories/: __init__.py
backend/app/schemas/: documents.py  identity.py  system.py
backend/app/security/: __init__.py  passwords.py  rbac.py  tokens.py
backend/app/services/: __init__.py  documents.py  embeddings.py  identity.py
backend/app/tools/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_vector_retrieval.py
backend/tests/unit/: test_cli.py  test_config.py  test_database.py  test_document_services.py  test_errors.py  test_identity_endpoints.py  test_identity_services.py  test_lifespan.py  test_logging.py  test_migrations.py  test_phase3_schema.py  test_request_logging.py  test_security.py  test_system_endpoints.py
docs/: api-design.md  architecture.md  database-design.md
