[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "enterprise-agentic-ai-backend"
version = "0.1.0"
description = "FastAPI foundation for the Enterprise Agentic AI Platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<1.15",
  "argon2-cffi>=23.1,<24",
  "asyncpg>=0.30,<0.31",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<0.116",
  "PyJWT>=2.10,<3",
  "pydantic-settings>=2.7,<2.8",
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "uvicorn[standard]>=0.34,<0.35",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "httpx>=0.28,<1",
  "mypy>=1.14,<1.15",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires explicitly configured external infrastructure",
]
